@@ -1,5 +1,11 @@
 2003-12-12  Mike Kestner  <mkestner@ximian.com>
 
+	* generator/CallbackGen.cs : kill some redundant generation
+	* generator/MethodBody.cs : pass array parameters as arrays of
+	the corresponding native type.
+
+2003-12-12  Mike Kestner  <mkestner@ximian.com>
+
 	* gnome/gnome-api.xml : regen'd
 	* parser/gapi2xml.pl : handle typedef enum _foo foo;
 	* parser/gapi-parser : support <exclude> elements in addition to <dir>
